syntax = "proto3";
option java_package = "com.autohome.models";
option java_outer_classname = "TopicModel";

message Topic {
    string id = 1;
    string oid = 2;
    string bizId = 3;
    string bizType = 4;
    string tblId = 5;
    string objectClassId = 6;
    string objectLineId = 7;
    string objectUid = 8;
    string nlpFlag = 9;
    string author = 10;
    string authorId = 11;
    string clubLastReplyDate = 12;
    string isDelete = 13;
    string jumpUrl = 14;
    string modifyTime = 15;
    string publishTime = 16;
    string refine = 17;
    string displayStatus = 18;
    string bbsId = 19;
    string bbsName = 20;
    string poll = 21;
    string rank = 22;
    string duplicationSign = 23;
    string field2 = 24;
    string guid = 25;
    string createTime = 26;
    string average = 27;
    string grade = 28;
    string medal = 29;
    string rowStatus = 30;
    string searchStatus = 31;
    string searchUsed = 32;
    string recommendUsed = 33;
    string localStatus = 34;
    string localUsed = 35;
    string localCreateAt = 36;
    string localUpdateAt = 37;
    string searchCreateAt = 38;
    string searchUpdateAt = 39;
    string createAt = 40;
    string updateAt = 41;
    string isGraphicArticle = 42;
    string createdStime = 43;
    string modifiedStime = 44;
    string cmsContentClass = 45;
    string imgUrl = 46;
    string longTitle = 47;
    string nlpKeyword = 48;
    string title = 49;
    string category = 50;
    string categoryId = 51;
    string feeling = 52;

    string content = 53;
    string tableName = 54;
    string keywords = 55;
    string brandsId = 56;
    string seriesId = 57;
    string articleIdTags = 58;
    string articleLabelTags = 59;
    string brandsName = 60;
    string seriesName = 61;
    string nlpPicTags = 62;
    string jsonReserve = 63;
    string msguid = 64;
    string msgtimetrace = 65;
    string graphicImgList = 66;
    string graphicImgList2 = 67;
    string graphicImgList3 = 68;
    string graphicImgList4 = 69;
}
